--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block titulo %}CODESI - La Angeda Digital Peruana{% endblock %}
 {% block contenido %}
     <section class="codesi">
         <h3>CODESI - La Agenda Digital Peruana 2.0</h3>
@@ -6,14 +7,14 @@
 
         <article class="holder_gallery">
         <a href="#" class="photo_hover2"><img width="150" height="99" alt="picture1" src="{{ STATIC_URL }}imagen/picture2.jpg"></a>
-        <h2>Visión</h2>
+        <h4>Visión</h4>
         <p>Sociedad peruana basada en principios de equidad, integración y no discriminación que utiliza efectiva y eficientemente la información en sus procesos de desarrollo, a través del uso intensivo de las tecnologías de la información y comunicación.</p>
         <!--<span class="readmore"><a href="#">Read more..</a></span>-->
         </article>
 
         <article class="holder_gallery">
         <a href="#" class="photo_hover2"><img width="150" height="99" alt="picture1" src="{{ STATIC_URL }}imagen/picture2.jpg"></a>
-        <h2>Misión</h2>
+        <h4>Misión</h4>
         <p>Promover la universalización del uso y acceso a las Tecnologías de la Información y Comunicaciones como herramientas para impulsar el desarrollo económico, social y cultural del país.</p>
         <!--<span class="readmore"><a href="#">Read more..</a></span>-->
         </article>
