--- a/templates/home/right.html
+++ b/templates/home/right.html
@@ -1,3 +1,22 @@
+<aside class="rigth-bar" style="width:100%;">
+    <h3 style="margin-left: 30px;">Informes</h3>
+    
+    <div style="margin-left: 30px;margin-bottom: 9px;padding: 8px 0;" class="well">
+        <ul class="nav nav-list">
+            <li class="nav-header">2011</li>
+            <li><a href="#"><i class="icon-book"></i>Home</a></li>
+            <li><a href="#"><i class="icon-book"></i>Library</a></li>
+            <li><a href="#"><i class="icon-book"></i>Applications</a></li>
+            <li class="nav-header">2010</li>
+            <li><a href="#"><i class="icon-book"></i>Profile</a></li>
+            <li><a href="#"><i class="icon-book"></i>Settings</a></li>
+            <li><a href="#"><i class="icon-book"></i>Help</a></li>
+            <li><a href="#"><i class="icon-list"></i>Leer más</a></li>
+        </ul>
+    </div>
+   
+</aside>
+
 <aside class="rigth-bar">
     <h3>Ultimas Noticias</h3>
 
