--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="recurso" content="http://freehtml5templates.com">
-        <title>CODESI - La Angeda Digital Peruana</title>
+        <title>{% block titulo %}{% endblock %}</title>
         <link rel="icon" href="images/favicon.gif" type="image/x-icon"/>
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
