--- a/templates/home/nav.html
+++ b/templates/home/nav.html
@@ -1,64 +1,41 @@
 <div class="navbar">
     <div class="navbar-inner">
         <div class="container">
-            <ul class="nav">
-                <li class="dropdown" id="menu1">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
-                    Quienes Somos
-                    <b class="caret"></b>
-                    </a>
-                <ul class="dropdown-menu">
-                    <li><a href="/">Presentación</a></li>
-                    <li><a href="#">Miembros</a></li>
+            <a class="brand" href="/">CODESI</a>
+            <div class="nav-collapse">
+                <ul class="nav">
+                    <li {% if app == 'miembro' %}class="active"{% endif %}><a href="/miembro/listar/">Miembros</a></li>
+                    <li class="dropdown" id="menu1">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
+                        Normatividad
+                        <b class="caret"></b>
+                        </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Oficiales</a></li>
+                        <li><a href="#">Relacionados Nacionales</a></li>
+                        <li><a href="#">Relacionados Internacionales</a></li>
+                        <li><a href="#">Acuerdos y Reuniones</a></li>
+                        <li><a href="#">Presentaciones</a></li>
+                    </ul>
+                    <li class="dropdown" id="menu1">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
+                        Grupos de Trabajo
+                        <b class="caret"></b>
+                        </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Infraestructura</a></li>
+                        <li><a href="#">Capacidades Humanas</a></li>
+                        <li><a href="#">Desarrollo y Aplicación Social</a></li>
+                        <li><a href="#">Producción y Servicios</a></li>
+                        <li><a href="#">Gobierno Electrónico</a></li>
+                        <li><a href="#">Políticas y Estratégias</a></li>
+                    </ul>
+                    <li><a href="#">Proyectos</a></li>
+                    <!--<li><a href="#">Opinión y Colaboración</a></li>
+                    <li><a href="#">Eventos</a></li>
+                    <li><a href="#">Enlaces</a></li>-->
                 </ul>
-                </li>
-                <li class="dropdown" id="menu1">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
-                    Normatividad
-                    <b class="caret"></b>
-                    </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Oficiales</a></li>
-                    <li><a href="#">Relacionados Nacionales</a></li>
-                    <li><a href="#">Relacionados Internacionales</a></li>
-                    <li><a href="#">Acuerdos y Reuniones</a></li>
-                    <li><a href="#">Presentaciones</a></li>
-                </ul>
-                <li class="dropdown" id="menu1">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
-                    Grupos de Trabajo
-                    <b class="caret"></b>
-                    </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Infraestructura</a></li>
-                    <li><a href="#">Capacidades Humanas</a></li>
-                    <li><a href="#">Desarrollo y Aplicación Social</a></li>
-                    <li><a href="#">Producción y Servicios</a></li>
-                    <li><a href="#">Gobierno Electrónico</a></li>
-                    <li><a href="#">Políticas y Estratégias</a></li>
-                </ul>
-                <li class="dropdown" id="menu1">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
-                    Seguimiento
-                    <b class="caret"></b>
-                    </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">2007</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">2008</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">2009</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">2010</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">2011</a></li>
-                </ul>
-                </li>
-                <li><a href="#">Proyectos</a></li>
-                <!--<li><a href="#">Opinión y Colaboración</a></li>
-                <li><a href="#">Eventos</a></li>
-                <li><a href="#">Enlaces</a></li>-->
-            </ul>
+            </div>
         </div>
     </div>
 </div>
