--- a/templates/home/nav.html
+++ b/templates/home/nav.html
@@ -5,17 +5,17 @@
             <div class="nav-collapse">
                 <ul class="nav">
                     <li {% if app == 'miembro' %}class="active"{% endif %}><a href="/miembro/listar/">Miembros</a></li>
-                    <li class="dropdown" id="menu1">
+                    <li class="dropdown {% if app == 'normatividad' %} active{% endif %}" id="menu1">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
                         Normatividad
                         <b class="caret"></b>
                         </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Oficiales</a></li>
-                        <li><a href="#">Relacionados Nacionales</a></li>
-                        <li><a href="#">Relacionados Internacionales</a></li>
-                        <li><a href="#">Acuerdos y Reuniones</a></li>
-                        <li><a href="#">Presentaciones</a></li>
+                        <li><a href="/normatividad/0/listar/">Oficiales</a></li>
+                        <li><a href="/normatividad/1/listar/">Relacionados Nacionales</a></li>
+                        <li><a href="/normatividad/2/listar/">Relacionados Internacionales</a></li>
+                        <li><a href="/normatividad/3/listar/">Acuerdos y Reuniones</a></li>
+                        <li><a href="/normatividad/4/listar/">Presentaciones</a></li>
                     </ul>
                     <li class="dropdown" id="menu1">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
