--- a/templates/home/nav.html
+++ b/templates/home/nav.html
@@ -30,8 +30,8 @@
                         <li><a href="#">Gobierno Electrónico</a></li>
                         <li><a href="#">Políticas y Estratégias</a></li>
                     </ul>
-                    <li><a href="#">Proyectos</a></li>
-                    <!--<li><a href="#">Opinión y Colaboración</a></li>
+                    <!--<li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Opinión y Colaboración</a></li>
                     <li><a href="#">Eventos</a></li>
                     <li><a href="#">Enlaces</a></li>-->
                 </ul>
