--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,9 @@
         
         <script src="{{ STATIC_URL }}js/jquery.js"></script>
         <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js"></script>
+        {% if app == 'evento' or app == 'noticia' or app == 'informe' %}
+        <script src='{{ STATIC_URL }}js/actividad.js'></script>
+        {% endif %}
 
     </body>
 </html>
