--- a/templates/home/nav.html
+++ b/templates/home/nav.html
@@ -6,30 +6,47 @@
                 <ul class="nav">
                     <li {% if app == 'miembro' %}class="active"{% endif %}><a href="/miembro/listar/">Miembros</a></li>
                     <li class="dropdown {% if app == 'normatividad' %} active{% endif %}" id="menu1">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
                         Normatividad
                         <b class="caret"></b>
                         </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/normatividad/0/listar/">Oficiales</a></li>
-                        <li><a href="/normatividad/1/listar/">Relacionados Nacionales</a></li>
-                        <li><a href="/normatividad/2/listar/">Relacionados Internacionales</a></li>
-                        <li><a href="/normatividad/3/listar/">Acuerdos y Reuniones</a></li>
-                        <li><a href="/normatividad/4/listar/">Presentaciones</a></li>
-                    </ul>
-                    <li class="dropdown" id="menu1">
+                        <ul class="dropdown-menu">
+                            <li><a href="/normatividad/0/listar/">Oficiales</a></li>
+                            <li><a href="/normatividad/1/listar/">Relacionados Nacionales</a></li>
+                            <li><a href="/normatividad/2/listar/">Relacionados Internacionales</a></li>
+                            <li><a href="/normatividad/3/listar/">Acuerdos y Reuniones</a></li>
+                            <li><a href="/normatividad/4/listar/">Presentaciones</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" id="menu2">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
                         Grupos de Trabajo
                         <b class="caret"></b>
                         </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Infraestructura</a></li>
-                        <li><a href="#">Capacidades Humanas</a></li>
-                        <li><a href="#">Desarrollo y Aplicación Social</a></li>
-                        <li><a href="#">Producción y Servicios</a></li>
-                        <li><a href="#">Gobierno Electrónico</a></li>
-                        <li><a href="#">Políticas y Estratégias</a></li>
-                    </ul>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Infraestructura</a></li>
+                            <li><a href="#">Capacidades Humanas</a></li>
+                            <li><a href="#">Desarrollo y Aplicación Social</a></li>
+                            <li><a href="#">Producción y Servicios</a></li>
+                            <li><a href="#">Gobierno Electrónico</a></li>
+                            <li><a href="#">Políticas y Estratégias</a></li>
+                        </ul>
+                    </li>
+                    {% if app == 'evento' or app == 'noticia' or app == 'informe' %}
+                        <li class="dropdown active" id="menu3">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#menu3">
+                            {% if app == 'evento' %}
+                            Eventos
+                            {% else %}{% if app == 'noticia' %}
+                            Noticias
+                            {% else %}{% if app == 'informe' %}
+                            Informes
+                            {% endif %}{% endif %}{% endif %}
+                            <b class="caret"></b>
+                            </a>
+                            <ul id='menua' class="dropdown-menu"></ul>
+                        </li>
+                    {% endif %}
                     <!--<li><a href="#">Proyectos</a></li>
                     <li><a href="#">Opinión y Colaboración</a></li>
                     <li><a href="#">Eventos</a></li>
