--- a/templates/home/nav.html
+++ b/templates/home/nav.html
@@ -44,7 +44,7 @@
                             {% endif %}{% endif %}{% endif %}
                             <b class="caret"></b>
                             </a>
-                            <ul id='menua' class="dropdown-menu"></ul>
+                            <ul id='menu' class="dropdown-menu"></ul>
                         </li>
                     {% endif %}
                     <!--<li><a href="#">Proyectos</a></li>
