--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="recurso" content="http://freehtml5templates.com">
         <title>{% block titulo %}{% endblock %}</title>
-        <link rel="icon" href="images/favicon.gif" type="image/x-icon"/>
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -55,6 +54,15 @@
         <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js"></script>
         {% if app == 'evento' or app == 'noticia' or app == 'informe' %}
         <script src='{{ STATIC_URL }}js/actividad.js'></script>
+        <script>
+            {% if app == 'evento' %}
+                var app = "evento";
+            {% else %}{% if app == 'noticia' %}
+                var app = "noticia";
+            {% else %}{% if app == 'informe' %}
+                var app = "informe";
+            {% endif %}{% endif %}{% endif %}
+        </script>
         {% endif %}
 
     </body>
