--- a/templates/home/right.html
+++ b/templates/home/right.html
@@ -1,15 +1,15 @@
 <aside class="rigth-bar" style="width:100%;">
-    <h3 style="margin-left: 30px;"><a href="#">Informes</a></h3>
+    <h3 style="margin-left: 30px;"><a href="/actividad/informes/">Informes</a></h3>
     
     <div style="margin-left: 30px;margin-bottom: 9px;padding: 8px 0;" class="well">
         <ul class="nav nav-list">
             <li class="nav-header">{{ informes.2.0 }}</li>
             {% for informe in informes.0 %}
-                <li><a href="#"><i class="icon-book"></i>{{ informe.titulo }}</a></li>
+                <li><a href="/actividad/informe/{{ informe.pk }}/{{ informe.get_titulo }}/"><i class="icon-book"></i>{{ informe.titulo }}</a></li>
             {% endfor %}
             <li class="nav-header">{{ informes.2.1 }}</li>
             {% for informe in informes.1 %}
-                <li><a href="#"><i class="icon-book"></i>{{ informe.titulo }}</a></li>
+                <li><a href="/actividad/informe/{{ informe.pk }}/{{ informe.get_titulo }}/"><i class="icon-book"></i>{{ informe.titulo }}</a></li>
             {% endfor %}
         </ul>
     </div>
@@ -19,12 +19,12 @@
 <aside class="rigth-bar">
     <h3><a href="/actividad/noticias/">Noticias</a></h3>
 
-    {% for nota in notas %}
+    {% for noticia in noticias %}
         <article class="holder_news">
-            <h4>{{ nota.titulo}}
-            <span>{{ nota.fecha|date:"d.m.Y" }}</span></h4>
-            {% autoescape off %}<p>{{ nota.cuerpo|striptags|truncatewords:12 }} {% endautoescape %}<span class="readmore">
-            <a href="/actividad/noticia/{{ nota.pk }}/{{ nota.get_titulo }}/">Read more..</a></span></p>
+            <h4>{{ noticia.titulo}}
+            <span>{{ noticia.fecha|date:"d.m.Y" }}</span></h4>
+            {% autoescape off %}<p>{{ noticia.cuerpo|striptags|truncatewords:12 }} {% endautoescape %}<span class="readmore">
+            <a href="/actividad/noticia/{{ noticia.pk }}/{{ noticia.get_titulo }}/">Read more..</a></span></p>
         </article>
     {% endfor %}
        
