--- a/static/css/codesi.css
+++ b/static/css/codesi.css
@@ -1,15 +1,34 @@
 @import url("bootstrap/css/bootstrap.min.css");
-/*@import url("bootstrap/css/bootstrap-responsive.min.css");*/
+@import url("bootstrap/css/bootstrap-responsive.min.css");
+
+@media (max-width: 768px){
+    header img{
+        width:100%;
+    }
+    
+    body {
+        top: 0 !important;
+        background-image: url("../imagen/fondo_movil.png") !important;
+        background-position: left top;
+        background-repeat: repeat;
+    }
+    
+    .container{
+        width:100%;
+    }
+}
+
 body, p, ul{
     font-family: Georgia,"Times New Roman",Times,serif;
 }
 
 body {
+    top: 40px;
+    position: relative;
     background-image: url("../imagen/bg1.png");
     background-position: left top;
     background-repeat: repeat;
     color: black;
-    margin: 0;
 }
 
 p {
@@ -31,13 +50,8 @@ h3 {
 }
 
 #container{
-    position:relative;
     background-color:white;
-    padding:15px;
-    overflow: hidden; 
-    -moz-box-shadow: 0 0 5px 5px #D8D8D8;
-    -webkit-box-shadow: 0 0 5px 5px #D8D8D8;
-    box-shadow: 0 0 5px 5px #D8D8D8;
+    padding:5px;
 }
 
 /************** Contenido **************/
@@ -48,11 +62,12 @@ h3 {
 	background:white;
 	/*padding:15px;*/
 	margin-bottom:10px;
+	width: 100%;
 }
 
 .holder_gallery {
     /*float: left;*/
-    margin-right: 10px;
+    /*margin-right: 10px;*/
     margin-bottom: 25px;
     padding: 0;
     /*width: 610px;*/
@@ -101,6 +116,7 @@ a img {
 	/*padding:15px;*/
 	margin-bottom:10px;
 	margin-left:30px;
+	width: 100%;
 }
 
 .holder_news {
@@ -133,31 +149,19 @@ a img {
 /************** Footer **************/
 footer {
     background-color: black;
-    clear: both;
-    height: 90px;
+    /*clear: both;*/
+    height: auto;
     /*margin-bottom: 18px;*/
     position: relative;
     width: 100%;
+    color : white;
+    font-size: 10px
+    padding : 5px;
+    text-align: center;
 }
 
-#FooterTwo {
-    color: white;
-    position: absolute;
-    right: 225px;
-    top: 26px;
-}
-
-#FooterTree {
-    color: white;
-    left: 225px;
-    position: absolute;
-    top: 26px;
-}
-
-.foot-container {
-    background-color: #33CC99;
-    margin: 0 auto;
-    width: 980px;
+footer p{
+    margin-bottom: 0;
 }
 
 /************** tips **************/
@@ -184,6 +188,21 @@ img.img_block {
     text-align:justify;
 }
 
+.masthead {
+    margin-bottom: 72px;
+    padding-top: 36px;
+}
+
+.jumbotron {
+    position: relative;
+}
+
+.mini-thumb {
+    height: 120px;
+}
+.portada {
+    height: 268px;
+}
 /*.holder_gallery li, ol{
     text-align:justify;
     list-style: none outside none;
