--- a/templates/home/footer.html
+++ b/templates/home/footer.html
@@ -1,6 +1,5 @@
 <footer>
-    <div class="foot-container">  
-    <div id="FooterTwo"> &copy; 2012 <a href="http://www.ongei.gob.pe/">O.N.G.E.I</a></div>
-    <div id="FooterTree"> Oficina Nacional de Gobierno Electrónico e Informática - Perú </a>   </div> 
-    </div>
+    <p><strong>La Agenda Digital Peruana 2.0</strong></p>
+    <p><a href='http://www.pcm.gob.pe' target='_new'>Presidencia del Consejo de Ministros</a></p>
+    <p><a href='http://www.creativecommons.org' target='_new'>Cc</a> 2012 - <a href="http://www.ongei.gob.pe/" target='_new'>O.N.G.E.I</a> - Perú</p>
 </footer>
