--- a/templates/home/nav.html
+++ b/templates/home/nav.html
@@ -31,7 +31,7 @@
                         <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Infraestructura</a></li>
+                            <li><a href="/equipo/1/listar/">Infraestructura</a></li>
                             <li><a href="#">Capacidades Humanas</a></li>
                             <li><a href="#">Desarrollo y Aplicación Social</a></li>
                             <li><a href="#">Producción y Servicios</a></li>
