--- a/static/css/codesi.css
+++ b/static/css/codesi.css
@@ -1,10 +1,38 @@
 @import url("bootstrap/css/bootstrap.min.css");
 @import url("bootstrap/css/bootstrap-responsive.min.css");
 
-@media (max-width: 768px){
+@media (max-width: 480px) {
     header img{
         width:100%;
     }
+    
+    body {
+        top: 0 !important;
+        background-image: url("../imagen/fondo_movil.png") !important;
+        background-position: left top;
+        background-repeat: repeat;
+    }
+    
+    .container{
+        width:100%;
+    }
+}
+ 
+@media (max-width: 768px) {
+    
+    body {
+        top: 0 !important;
+        background-image: url("../imagen/fondo_movil.png") !important;
+        background-position: left top;
+        background-repeat: repeat;
+    }
+    
+    .container{
+        width:100%;
+    }
+}
+ 
+@media (min-width: 768px) and (max-width: 980px) {
     
     body {
         top: 0 !important;
