--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -18,10 +18,10 @@
                         <li class="span2 hidden-phone">
                             <a class="thumbnail" href="#"> <img class='mini-thumb' width='160' height='120' alt="foto" src="{{ slide.foto_2 }}"></a>
                         </li>
-                        <li class="span2 hidden-phone">
+                        <li class="span2 hidden-phone hidden-tablet">
                             <a class="thumbnail" href="#"> <img class='mini-thumb' width='160' height='120' alt="foto" src="{{ slide.foto_3 }}"> </a>
                         </li>
-                        <li class="span2 hidden-phone">
+                        <li class="span2 hidden-phone hidden-tablet">
                             <a class="thumbnail" href="#"> <img class='mini-thumb' width='160' height='120' alt="foto" src="{{ slide.foto_4 }}"> </a>
                         </li>
                     </ul>
