--- a/templates/home/nav.html
+++ b/templates/home/nav.html
@@ -32,11 +32,11 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/equipo/1/listar/">Infraestructura</a></li>
-                            <li><a href="#">Capacidades Humanas</a></li>
-                            <li><a href="#">Desarrollo y Aplicación Social</a></li>
-                            <li><a href="#">Producción y Servicios</a></li>
-                            <li><a href="#">Gobierno Electrónico</a></li>
-                            <li><a href="#">Políticas y Estratégias</a></li>
+                            <li><a href="/equipo/2/listar/">Capacidades Humanas</a></li>
+                            <li><a href="/equipo/3/listar/">Desarrollo y Aplicación Social</a></li>
+                            <li><a href="/equipo/4/listar/">Producción y Servicios</a></li>
+                            <li><a href="/equipo/5/listar/">Gobierno Electrónico</a></li>
+                            <li><a href="/equipo/6/listar/">Políticas y Estratégias</a></li>
                         </ul>
                     </li>
                     {% if app == 'evento' or app == 'noticia' or app == 'informe' %}
