--- a/templates/home/footer.html
+++ b/templates/home/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <p><strong>La Agenda Digital Peruana 2.0</strong></p>
     <p><a href='http://www.pcm.gob.pe' target='_new'>Presidencia del Consejo de Ministros</a></p>
-    <p><a href='http://www.creativecommons.org' target='_new'>Cc</a> 2012 - <a href="http://www.ongei.gob.pe/" target='_new'>O.N.G.E.I</a> - Perú</p>
+    <p><a href='https://github.com/ONGEI/codesi' target='_new'><img src='{{ STATIC_URL }}imagen/opensource.png/' alt='repo'></a> 2012 - <a href="http://www.ongei.gob.pe/" target='_new'>O.N.G.E.I</a> - Perú</p>
 </footer>
