--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.gif" type="image/x-icon"/> 
+        <link rel="shortcut icon" href="{{ STATIC_URL }}imagen/favicon.ico" type="image/x-icon"/> 
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/codesi.css"/>
         {% block extrahead %}
         {% endblock extrahead %}
